--- a/project/.env
+++ b/project/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://samarthag06:samarthag22@cluster0.vwvnl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://piyushchandra004:pIBeptzVScuzEVwm@greenmartcluster.xmqao4p.mongodb.net/?retryWrites=true&w=majority&appName=GreenMartCluster
 JWT_SECRET=1234
 PORT=5000
 # VITE_API_URL=https://greenhub-2.onrender.com/api
