--- a/project/package.json
+++ b/project/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "dev:server": "nodemon server/index.js"
+    "dev:server": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.0",
